:sparkles: feat: new sound effects have been added, the logic of the buttons has been changed to obtain a cleaner, more minimalist screen and to be better for the worker or student who will be using it

--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,9 @@ section {
     text-align: center;
 
 }
-
+#reset{
+    cursor: pointer;
+}
 #time-left {
     font-size: 3em;
     margin: 10px 0;
